<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Cadastro1Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmail"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPasswordC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassword"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_passwordC"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_menu_mylocation" />

        <Button
            android:onClick="salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/cancelar"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="Proximo"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/cancelar"
            android:onClick="cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="Cancelar"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
