<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PerfilActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_nome"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNome"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_matricula"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtMatricula"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/prompt_telefone"
                android:inputType="phone"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <Button
            android:onClick="atualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/excluir"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="Atualizar"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/excluir"
            android:onClick="excluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="Excluir Cadastro"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>